# cybernetic

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  quickstart.md
docs/src/concepts/: glossary.md  mental-model.md  sft-vs-rl.md
docs/src/guides/: authentication.md  behavior-ci.md  checkpoints.md  sampling.md  training.md
docs/src/reference/: behavior-ci-config.md  cli.md  client-api.md  data-contracts.md  errors.md
examples/: README.md  cosmos_sft_smoke.py  dreamzero_rl_smoke.py  dreamzero_sft_smoke.py  finetune_on_real_data.py  flywheel_demo.py  groot_sft_smoke.py  pi05_sft_smoke.py  pi0_droid_sampling.py  push_checkpoint_to_hf.py
src/cybernetics/: __init__.py  _base_client.py  _client.py  _compat.py  _exceptions.py  _files.py  _models.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  client.py
src/cybernetics/_utils/: _logs.py  _resources_proxy.py
src/cybernetics/behavior_ci/: __init__.py  artifacts.py  evaluator.py  media.py  renderers.py  runner.py  schemas.py
src/cybernetics/behavior_ci/backends/: __init__.py  base.py  scripted.py
src/cybernetics/behavior_ci/simulators/: __init__.py  base.py  fixture.py  isaac_session.py
src/cybernetics/behavior_ci/taskkit/: __init__.py  base.py  loader.py  lock.py  registry.py
src/cybernetics/behavior_ci/tasks/: __init__.py
src/cybernetics/cli/: __main__.py  client.py  context.py  exceptions.py  output.py
src/cybernetics/cli/commands/: __init__.py  auth.py  behavior_ci.py  checkpoint.py  doctor.py  replay.py  robot_task.py  run.py  sim.py  splat.py  version.py
src/cybernetics/lib/: api_future_impl.py  async_worldlines_provider.py  chunked_fwdbwd_helpers.py  credentials.py  internal_client_holder.py  queue_state_logger.py  retry_handler.py  sidecar.py  telemetry.py
src/cybernetics/lib/cosmos/: __init__.py  serde.py
src/cybernetics/lib/dreamzero/: __init__.py  lr_schedule.py  relative_actions.py  serde.py
src/cybernetics/lib/openpi/: __init__.py
src/cybernetics/lib/pi05/: __init__.py  serde.py
src/cybernetics/lib/public_interfaces/: __init__.py  api_future.py  rest_client.py  sampling_client.py  service_client.py  (+1 more)
src/cybernetics/replay/: __init__.py  agent.py  client.py  errors.py  models.py
src/cybernetics/resources/: futures.py  service.py  telemetry.py
src/cybernetics/robotics/: __init__.py  artifacts.py  client.py  components.py  contracts.py  datasets.py  env.py  evidence.py  experiments.py  fixture.py  gymnasium.py  locomujoco.py  replay.py  runner.py  runtime_contracts.py  runtime_services.py  task_client.py  vla_eval.py  world_models.py  worldlines.py  worldlines_policy_service.py
src/cybernetics/sim/: __init__.py  client.py  errors.py  mcp.py  packaging.py
src/cybernetics/types/: __init__.py  checkpoint.py  create_sampling_session_request.py  custom_loss_v2.py  droid_observation.py  future_retrieve_response.py  get_scheduler_state_response.py  get_server_capabilities_response.py  image_asset_pointer_chunk.py  image_chunk.py  load_weights_request.py  load_weights_response.py  loss_fn_type.py  pi0_droid_dsrl_action.py  policy_conditioning.py  policy_session_context.py  policy_trajectory_step.py  sample_request.py  sample_response.py  sampling_params.py  save_weights_for_sampler_response.py  save_weights_response.py  tensor_data.py  text_data.py  weights_info_response.py  worldlines_session_cancel_response.py
tests/: test_auth_wire.py  test_behavior_ci_evaluator.py  test_behavior_ci_isaac_adapter.py  test_behavior_ci_manifest_v2.py  test_behavior_ci_media.py  test_behavior_ci_runner.py  test_behavior_ci_runner_v2.py  test_behavior_ci_taskkit.py  test_behavior_ci_verify.py  test_capabilities.py  test_checkpoint_paths.py  test_cli_auth.py  test_cli_doctor.py  test_cli_replay.py  test_cli_robot_task.py  test_cli_sim.py  test_continuous_policy_sampling.py  test_create_session_request.py  test_credentials.py  test_examples.py  test_import_contract.py  test_one_training_client.py  test_openpi_contract.py  test_packaging_boundary.py  test_queue_state_logger.py  test_relative_stats.py  test_replay_sdk.py  test_robotics_client.py  test_robotics_components.py  test_robotics_contracts.py  test_robotics_dataset_artifacts.py  test_robotics_evidence.py  test_robotics_fixture_runner.py  test_robotics_gymnasium.py  test_robotics_replay.py  test_robotics_runtime_contracts.py  test_robotics_task_client.py  test_robotics_unitree_g1_provider.py  test_robotics_vla_eval.py  test_robotics_world_model_artifacts.py  (+11 more)
(+12 files in other folders)
